...
        android:layout_marginTop="47dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="83dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="Welcome to Online Barter Trader !!"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailAddressLogIn"
...
        android:ems="10"
        android:hint="Enter your email ID"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLogIn"
...
        android:layout_marginBottom="82dp"
        android:ems="10"
        android:hint="Enter your Password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/receiverLoginButtonLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressLogIn" />

    <Button
        android:id="@+id/receiverLoginButtonLogIn"
...
