<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="363dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="#000000"
            app:queryHint="Search Here" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginStart="236dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"/>

        <ListView
            android:id="@+id/receiverListReceiver"
            android:layout_width="363dp"
            android:layout_height="616dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
